<resources>

    <string name="app_name">SpectroPolaris</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_menu">SpectroPolaris</string>
    <string name="title_color_picker">ColorPicker</string>
    <string name="menu_title">SpectroPolaris</string>
    <string name="menu_join">Join game</string>
    <string name="menu_options">Options</string>
    <string name="menu_quit">Quit game</string>
    <string name="title_activity_join">JoinActivity</string>
    <string name="menu_hostIP">Host IP:</string>
    <string name="menu_ipMessage">Host\'s ip adress</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="ip_adresses">ip_adresses</string>
    <string name="menu_nameMessage">User name</string>
    <string name="menu_username">Username:</string>
    <string name="menu_colorButton">Choose Color</string>

</resources>