<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="#000000" >

    <TextView
        android:id="@+id/menu_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_medium"
        android:text="@string/menu_title"
        android:textSize="40sp"
        android:textColor="#ffff00"
        android:textStyle="bold"
        tools:context=".MenuActivity"
        android:layout_marginBottom="30dp" />
    
   
    <Button
        android:id="@+id/menu_join"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/menu_join"
        android:layout_marginBottom="10dp"
        android:onClick="joinGame"/>
    
    <Button
        android:id="@+id/menu_quit"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/menu_quit"
        android:layout_marginBottom="10dp"
        android:onClick="quit"/>

</LinearLayout>
